--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "directories": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c build/rollup.config.js"
+    "build": "npm run build-module && npm run build-examples",
+    "build-module": "rollup -c build/rollup.config.js",
+    "build-examples": "npm run rollup-examples && npm run copy-css",
+    "rollup-examples": "cd examples && rollup -c",
+    "copy-css": "echo examples/*/ | xargs -n 1 cp dist/vectormap.css"
   },
   "repository": {
     "type": "git",
@@ -30,10 +34,12 @@
   "devDependencies": {
     "http-server": "^0.11.1",
     "rollup": "^1.11.3",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^4.2.3"
   },
   "dependencies": {
     "@mapbox/vector-tile": "^1.3.1",
-    "d3-geo": "^1.11.3"
+    "d3-geo": "^1.11.3",
+    "topojson-client": "^3.0.0"
   }
 }
