--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
   "devDependencies": {
     "http-server": "^0.11.1",
     "rollup": "^1.11.3",
+    "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^4.2.3"
   },
   "dependencies": {
     "@mapbox/vector-tile": "^1.3.1",
     "d3-geo": "^1.11.3",
+    "pbf": "^3.2.0",
     "topojson-client": "^3.0.0"
   }
 }
