--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "dependencies": {
     "@mapbox/vector-tile": "^1.3.1",
     "d3-geo": "^1.11.3",
-    "pbf": "^3.2.0",
+    "pbf": "github:jjhembd/pbf",
     "topojson-client": "^3.0.0"
   }
 }
