--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "rollup-plugin-node-resolve": "^4.2.3"
   },
   "dependencies": {
-    "@mapbox/vector-tile": "^1.3.1",
     "d3-geo": "^1.11.3",
     "pbf": "github:jjhembd/pbf",
-    "topojson-client": "^3.0.0"
+    "topojson-client": "^3.0.0",
+    "vector-tile-js": "github:jjhembd/vector-tile-js"
   }
 }
