Add handling for style references and interpolated values
- deref.js: new file, from mapbox-gl-js
- styleFunction.js: interpolates style values (numbers and colors)
- renderer.js: add setStyle function, to call evalStyle if value is
  a function

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rollup-plugin-node-resolve": "^4.2.3"
   },
   "dependencies": {
+    "csscolorparser": "^1.0.3",
     "d3-geo": "^1.11.3",
     "pbf": "github:jjhembd/pbf",
     "topojson-client": "^3.0.0",
