--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "rollup": "^1.11.3",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^4.2.3"
+    "rollup-plugin-node-resolve": "^4.2.3",
+    "touchy": "github:jjhembd/touchy"
   },
   "dependencies": {
     "csscolorparser": "^1.0.3",
