First test of worker threads for requesting and parsing .mvt data
- xhrGet.js: Moved out of read.js, standardized callback signature
- main.js: Initialize worker thread with code to read MVT, pass
  link to reader to tile factory
- tile.js: Input worker-hosted MVT reader on init
- boss.js: Initialize worker thread, manage callbacks
- worker.js: readMVT with message passing wrapper
- build/rollup.config.js: Build worker thread bundle, copy to examples
- examples/worker: first test copied from examples/macrostrat

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build-module && npm run build-examples",
     "build-module": "rollup -c build/rollup.config.js",
-    "build-examples": "cd examples && rollup -c"
+    "build-examples": "npm run rollup-examples && npm run copy-worker",
+    "rollup-examples": "cd examples && rollup -c",
+    "copy-worker": "echo examples/*/ | xargs -n 1 cp dist/worker.bundle.js"
   },
   "repository": {
     "type": "git",
