--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "tilekiln",
+  "name": "tile-kiln",
   "version": "0.0.1",
   "description": "Map tile rendering guided by a Mapbox style document",
-  "main": "dist/tilekiln.bundle.js",
-  "module": "dist/tilekiln.bundle.js",
+  "main": "dist/tile-kiln.bundle.js",
+  "module": "dist/tile-kiln.bundle.js",
   "files": [
     "dist"
   ],
@@ -32,12 +32,12 @@
   "author": "Jeshurun Hembd",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jjhembd/tilekiln/issues"
+    "url": "https://github.com/globeletjs/tile-kiln/issues"
   },
-  "homepage": "https://github.com/jjhembd/tilekiln#readme",
+  "homepage": "https://github.com/globeletjs/tile-kiln#readme",
   "devDependencies": {
     "http-server": "^0.11.1",
-    "rollup": "^1.19.4",
+    "rollup": "^1.23.1",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^4.2.4",
