Refactor layer group management
- tile.js: Initialize worker thread here. Don't initialize laminae
  on tile init
- groups.js: Add function to add laminae canvases to an existing
  tile, and add tile coordinates and a link to the sources object
  to each lamina
- load-mvt/: Remove Macrostrat-specific code
- renderer.js: Rework getDrawFuncs to apply to either a tile or a
  lamina, and reduce parameters of initialization
- main.js: Clean up and simplify. Note: some time reporting
  features were removed

--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
   },
   "dependencies": {
     "pbf": "^3.2.1",
-    "tile-painter": "^0.1.0",
-    "tile-stencil": "0.0.1",
+    "tile-painter": "^0.1.2",
+    "tile-stencil": "^0.1.2",
     "vector-tile-esm": "^2.1.0",
     "zero-timeout": "0.0.2"
   }
