--- a/package.json
+++ b/package.json
@@ -37,16 +37,21 @@
   "homepage": "https://github.com/globeletjs/tile-kiln#readme",
   "devDependencies": {
     "http-server": "^0.11.1",
-    "rollup": "^1.27.3",
+    "rollup": "^1.27.14",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "touch-sampler": "0.0.1"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
+    "d3": "^5.15.0",
+    "geotiff": "^1.0.0-beta.6",
     "pbf": "^3.2.1",
+    "plotty": "^0.4.1",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "tile-painter": "^0.1.2",
-    "tile-stencil": "^0.1.3",
+    "tile-stencil": "^0.1.4",
     "vector-tile-esm": "^2.1.0",
     "zero-timeout": "0.0.2"
   }
