--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build-module": "rollup -c build/rollup.config.js",
     "build-examples": "npm run rollup-examples && npm run copy-worker",
     "rollup-examples": "cd examples && rollup -c",
-    "copy-worker": "echo examples/*/ | xargs -n 1 cp dist/worker.bundle.js",
+    "copy-worker": "echo examples/*/ | xargs -n 1 cp node_modules/tile-mixer/dist/worker.bundle.js",
     "postversion": "git push && git push --tags"
   },
   "repository": {
@@ -45,8 +45,9 @@
   },
   "dependencies": {
     "pbf": "^3.2.1",
+    "tile-mixer": "github:GlobeletJS/tile-mixer",
     "tile-painter": "^0.1.2",
-    "tile-stencil": "^0.1.3",
+    "tile-stencil": "^0.2.0",
     "vector-tile-esm": "^2.1.0",
     "zero-timeout": "0.0.2"
   }
