--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "homepage": "https://github.com/globeletjs/tile-kiln#readme",
   "devDependencies": {
-    "http-server": "^0.11.1",
+    "http-server": "^0.12.1",
     "rollup": "^1.27.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
@@ -45,11 +45,11 @@
     "touch-sampler": "0.0.1"
   },
   "dependencies": {
+    "chunked-queue": "0.0.1",
     "pbf": "^3.2.1",
-    "tile-mixer": "github:GlobeletJS/tile-mixer",
+    "tile-mixer": "0.0.2",
     "tile-painter": "^0.1.2",
     "tile-stencil": "^0.2.0",
-    "vector-tile-esm": "^2.1.0",
-    "zero-timeout": "0.0.2"
+    "vector-tile-esm": "^2.1.0"
   }
 }
